Fixes wrap of markdown buttons on small devices

--- a/src/app/markdown/markdown-bar/markdown-bar.component.scss
+++ b/src/app/markdown/markdown-bar/markdown-bar.component.scss
@@ -1,6 +1,7 @@
 ul {
   li {
     flex: 1 0 calc(100% / 7);
+    max-width: calc(100% / 7);
     line-height: 20px;
     &:hover {
       opacity: 0.8;
@@ -20,7 +21,7 @@ ul {
 .escape-icon::before {
   font-weight: bold;
   content: "\2216";
-  font-size: medium;
+  font-size: large;
 }
 
 .latex-icon::before {
